attmepting to find the correct logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="https://www.google.com/imgres?q=charity%20water%20logo&imgurl=https%3A%2F%2Fwww.clipartmax.com%2Fpng%2Fmiddle%2F143-1435214_charity-water-charity-water-logo-png.png&imgrefurl=https%3A%2F%2Fwww.clipartmax.com%2Fmiddle%2Fm2i8d3i8i8A0Z5K9_charity-water-charity-water-logo-png%2F&docid=Yl0EuQ5aI-JKXM&tbnid=f_exUNV-7_X1LM&vet=12ahUKEwj52ZO5lcKPAxVjkWoFHQkGM0IQM3oECCgQAA..i&w=840&h=138&hcb=2&ved=2ahUKEwj52ZO5lcKPAxVjkWoFHQkGM0IQM3oECCgQAA" width="100" height="100" alt="a gray rabbit"> </img>
+  <img class="hero-logo" src="https://www.clipartmax.com/png/middle/143-1435214_charity-water-charity-water-logo-png.png" width="100" height="100" alt="Charity: water logo">
     <div class="white-box">
       <h1>Build the future one drop at a time.</h1>
       <p>Water empowers the next generation of leaders to create lasting impact—starting with clean, safe water for all.</p>
