more and more attmepts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-  <img src="https://seeklogo.com/images/C/charity-water-logo-0B5B2B6B2C-seeklogo.com.png" alt="Charity: water logo">
+  <img src="https://favpng.com/png_view/jerrycan-charity-water-non-profit-organisation-logo-charitable-organization-drinking-water-png/dQbfnTXM" alt="Charity: water logo">
     <div class="white-box">
       <h1>Build the future one drop at a time.</h1>
       <p>Water empowers the next generation of leaders to create lasting impact—starting with clean, safe water for all.</p>
