--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <!-- Navbar -->
   <nav>
     <ul>
-      <li><a href="#">Logo</a></li>
       <li><a href="#">Home</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Get Involved</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </nav>
 
