Why won't this image display

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-  <img src="https://seeklogo.com/images/C/charity-water-logo-0B5B2B6B2C-seeklogo.com.png" alt="Charity: water logo" class="hero-logo">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Charity_Water_logo.svg" alt="Charity: water logo" class="hero-logo">
     <div class="white-box">
       <h1>Build the future one drop at a time.</h1>
       <p>Water empowers the next generation of leaders to create lasting impact—starting with clean, safe water for all.</p>
